--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.2.11",
     "@types/react-dom": "^18.2.4",
     "@types/react-router-dom": "^5.3.3",
+    "howler": "^2.2.3",
     "lottie-web": "^5.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
-    "@types/file-type": "^10.9.1"
+    "@types/file-type": "^10.9.1",
+    "@types/howler": "^2.2.7"
   }
 }
